--- a/server/package.json
+++ b/server/package.json
@@ -8,11 +8,12 @@
     "npm": "8.19.2"
   },
   "scripts": {
-    "client-install": "npm install --prefix client",
+    "install-client": "cd ../client && npm install",
+  "build-client": "cd ../client && npm run build",
+  "start": "npm run build-client && node server.js"
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "start": "node server.js"
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
