--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "install-client": "cd ../client && npm install",
   "build-client": "cd ../client && npm run build",
-  "start": "npm run build-client && node server.js"
+  "start": "npm run build-client && node server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
